# umbra

./: .gitattributes  .gitmodules  CMakeLists.txt
assets/levels/: test_area.umbra
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: line.frag  line.vert  quad.frag  quad.vert
src/: main.cpp
src/ai/: BehaviorTree.h
src/animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h
src/audio/: AudioManager.cpp  AudioManager.h  Sound.cpp  Sound.h
src/core/: Config.cpp  Config.h  Engine.cpp  Engine.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/dialogue/: DialogueSystem.cpp  DialogueSystem.h
src/editor/: LevelEditor.cpp  LevelEditor.h
src/entities/: Enemy.cpp  Enemy.h  Entity.h  Player.cpp  Player.h
src/game/: Game.cpp  Game.h
src/graphics/: Camera.cpp  Camera.h  Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h
src/levels/: TileMap.cpp  TileMap.h
src/particles/: ParticleSystem.cpp  ParticleSystem.h
src/physics/: Collider.cpp  Collider.h  PhysicsEngine.cpp  PhysicsEngine.h
src/save/: SaveManager.cpp  SaveManager.h
src/states/: GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  StateManager.cpp  StateManager.h
src/ui/: Button.cpp  Button.h  UI.cpp  UI.h
